# imageboard-explorer

./: .gitignore  AGENTS.md  DEVELOPMENT.md  README.md  pyproject.sanitized.toml  pyproject.toml
scripts/: .gitignore  install-dev.sh  install.sh  release.sh  run.sh  update.sh
src/imageboard_explorer/: main.py  models.py  text.py
src/imageboard_explorer/clients/: chan_api.py
src/imageboard_explorer/static/css/: app.css
src/imageboard_explorer/static/js/: app.js
src/imageboard_explorer/templates/: catalog.html  home.html  image_view.html  layout.html  layout_image.html  post_view.html  thread.html
src/imgboard_explorer/: main.py  text.py
src/imgboard_explorer/clients/: chan_api.py
src/imgboard_explorer/static/js/: app.js
tests/: test_cache.py  test_media.py  test_routes.py  test_text.py  test_urls.py
