[project]
name = "comfy-imageboard-explorer"
version = "2026.2.9"
description = "A TUI-style webapp for browsing imageboard content in a simplified view."
readme = "README.md"
requires-python = ">=3.14.2"
license = {text = "Unlicense"}
authors = [
    {name = "Ben Chitty", email = "htmlgxn@pm.me"},
]
dependencies = [
    "fastapi==0.115.8",
    "httpx==0.27.2",
    "jinja2==3.1.4",
    "pydantic>=2.12.5",
    "uvicorn==0.30.6",
]

[project.scripts]
imgboard-explorer = "imgboard_explorer.main:main"

[project.urls]
Homepage = "https://github.com/htmlgxn/comfy-imageboard-explorer"
Repository = "https://github.com/htmlgxn/comfy-imageboard-explorer"

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/imgboard_explorer"]
include = ["src/imgboard_explorer/templates/*", "src/imgboard_explorer/static/**/*"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "C90", "UP", "B", "A", "C4", "T10", "ISC", "ICN", "G", "PIE", "PT", "Q", "RSE", "RET", "SIM", "TID", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "RUF"]
ignore = ["E501", "C901", "PLW2901", "PLR0913", "PLR2004", "TRY003", "TRY300", "RET504"]

[tool.ruff.lint.isort]
known-first-party = ["imgboard_explorer"]
combine-as-imports = true

[tool.mypy]
python_version = "3.14"
warn_return_any = true
strict_optional = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "ruff>=0.15.0",
    "tomli-w>=1.2.0",
]
